# slchat.py

./: .gitignore  LICENSE  README.md  pyproject.toml  slchat.py
slchat/: __init__.py  classes.py  client.py  context.py  embed.py  models.py  utils.py
slchat/classes/: __init__.py  command.py  context.py  embed.py  typing.py
